project manifest files/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: visit-counter
  namespace: vq8-k8s
spec:
  selector:
    app: visit-counter
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
