project manifest files/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: vq8-k8s
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
  type: ClusterIP
